--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,38 +1,17 @@
-<!-- Copyright 2016 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License. -->
 <resources>
-    <!-- Title of app -->
-    <string name="app_name">Hello Shared Prefs</string>
-
-    <!-- Button label for blue button -->
-    <string name="blue_button">Blue</string>
-
-    <!-- Button label for green button -->
-    <string name="green_button">Green</string>
-
-    <!-- Button label for red button -->
-    <string name="red_button">Red</string>
-
-    <!-- Button label for black button -->
-    <string name="black_button">Black</string>
-
-    <!-- Default string for count textview -->
-    <string name="default_count">0</string>
-
-    <!-- Button label for Count button -->
-    <string name="count_button">Count</string>
-
-    <!-- Button label for Reset button -->
-    <string name="reset_button">Reset</string>
+    <string name="app_name">Droid Cafe</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="intro_text">Droid Desserts</string>
+    <string name="choose_a_dessert">Choose a dessert.</string>
+    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
+    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
+    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
+    <string name="donut_order_message">You ordered a donut.</string>
+    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
+    <string name="froyo_ordered_message">You ordered a FroYo.</string>
+    <string name="same_day_messenger_service">Same day messenger service</string>
+    <string name="next_day_ground_delivery">Next day ground delivery</string>
+    <string name="pick_up">Pick up</string>
+    <string name="chosen">Chosen: </string>
+    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
 </resources>
